fix atkfieldset css alignments

--- a/src/Resources/public/styles/style.css
+++ b/src/Resources/public/styles/style.css
@@ -9511,7 +9511,9 @@ span.form-control-static {
 .atkAttrRowHidden {
   display: none !important; }
 
-.atkfieldset > .fieldset-form-group, .atkfieldset > .fieldset-form-group > div {
+.atkfieldset > .fieldset-form-group,
+.atkfieldset > .fieldset-form-group > div,
+.atkfieldset > .fieldset-form-group input[type="file"] {
   display: inline; }
 
 .atkfieldset label {
