--- a/src/Resources/src/sass/_stuff.scss
+++ b/src/Resources/src/sass/_stuff.scss
@@ -135,7 +135,10 @@ span.form-control-static {
   display: none !important;
 }
 
-.atkfieldset > .fieldset-form-group, .atkfieldset > .fieldset-form-group > div  {
+.atkfieldset > .fieldset-form-group,
+.atkfieldset > .fieldset-form-group > div,
+.atkfieldset > .fieldset-form-group input[type="file"]
+{
   display: inline;
   // vertical-align: middle;
 }
